hphp/hack/test/typecheck/reactive/rx_superglobals9.php
<?hh

<<__Rx>>
function f($x) {
  $a = $_ENV;
}
